[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"
name = "linker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
once_cell = "1.5"
regex = "1"

# http
reqwest = { version = "0.12", features = ["blocking"] }

# logging
env_logger = "0.11"
log = "0.4"

# error
color-eyre = "0.6"
eyre = "0.6"
